Implement READ CSV
* use READ CSV when loading TPC-H data
* remove csv-loader code